chore: test simple js endpoint

--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
         {
-            "src": "src/simple-test.ts",
+            "src": "src/simple.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "src/simple-test.ts"
+            "dest": "src/simple.js"
         }
     ]
 }
