--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,12 @@
     "rewrites": [
         {
             "source": "/(.*)",
-            "destination": "/api/index"
+            "destination": "/api/index.js"
         }
-    ]
+    ],
+    "functions": {
+        "api/index.js": {
+            "includeFiles": "prisma/schema.prisma"
+        }
+    }
 }
